feat(performance): implement Java 23 Virtual Threads across Jetty, Batch Engine, Accelerators, and Event Messaging